--- a/instagram.web/app/views/home/index.ejs
+++ b/instagram.web/app/views/home/index.ejs
@@ -29,6 +29,27 @@
 				return false;
 			});
 
+			$("#btn-publish").click(function () {
+				var formData = new FormData();
+				var file = document.getElementById('file').files[0];
+				var title = document.getElementById('title').value;
+				formData.append("file", file);
+				formData.append("title", title);
+
+				var xhr = new XMLHttpRequest();
+
+				xhr.onreadystatechange = function () {
+					if (xhr.readyState == 4) {
+						var response = xhr.responseText;
+						document.getElementById('message').innerHTML = response;
+					}
+				}
+
+				xhr.open("POST", "http://localhost::8080/api");
+				xhr.send(formData);
+
+
+			});
 		});
 	</script>
 
