--- a/instagram.web/app/public/css/style.css
+++ b/instagram.web/app/public/css/style.css
@@ -54,7 +54,7 @@ body {
 	text-align: center;
 }
 
-.publicacao .title {
+.publish .title {
 	background-color: #FFF;
 	padding-left: 30px;
 	padding-top: 15px;
