--- a/instagram.web/app/views/home/index.ejs
+++ b/instagram.web/app/views/home/index.ejs
@@ -8,15 +8,35 @@
 
 	<!-- JQuery -->
 	<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-	<!-- bootstrap - link cdn -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-	<!-- incluindo css -->
 	<link href="css/style.css" rel="stylesheet">
 
 	<script>
 		$(document).ready(function () {
+
+			function load_posts(){
+				var xhr = new XMLHttpRequest();
+				xhr.open('GET', 'http://localhost:8080/api');
+				xhr.onload = function(){
+					 if(xhr.status == 200){
+						 var data = $.parseJSON(xhr.responseText);
+						 console.log(data);
+						 data.forEach(item =>{
+							$('#container_timeline').append(
+								'<div class="publish">'+
+									'<span class="title">'+ item.title +
+										'</span>'+
+										'<img src="http://localhost:8080/spool/"' + item.url_image +' />' +
+										'</div>'
+							);
+						 });
+					 }
+				}
+				xhr.send();
+			}
+			
+			load_posts();
 
 			$('#btn_insert').click(function () {
 				$('#container_timeline').hide();
@@ -45,10 +65,8 @@
 					}
 				}
 
-				xhr.open("POST", "http://localhost::8080/api");
+				xhr.open("POST", "http://localhost:8080/api");
 				xhr.send(formData);
-
-
 			});
 		});
 	</script>
