--- a/instagram.web/app/views/home/index.ejs
+++ b/instagram.web/app/views/home/index.ejs
@@ -27,7 +27,7 @@
 								'<div class="publish">'+
 									'<span class="title">'+ item.title +
 										'</span>'+
-										'<img src="http://localhost:8080/spool/"' + item.url_image +' />' +
+										'<img src="http://localhost:8080/spool/' + item.url_image +'" />' +
 										'</div>'
 							);
 						 });
